quick spacing fix

--- a/react-website/src/App.css
+++ b/react-website/src/App.css
@@ -409,7 +409,7 @@ html {
 
 .home-banner{
   margin-bottom: 20px;
-  padding-top: 50px;
+  
 }
 
 #about{
